eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billi-bank-ingress
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "billi-bank-api.qxv.wtf"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: billi-bank-api-service
            port:
              number: 80
  tls:
  - hosts:
    - billi-bank-api.qxv.wtf
    secretName: billi-bank-api-cert
